--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "lego_a3",
+  "name": "assignment-4",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css"
+    "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css --jit"
   },
   "author": "Sheng-Lin Yang",
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.7.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.3"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   }
 }
