--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.7.2",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mongoose": "^8.3.1",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.2"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
